[gd_scene load_steps=9 format=3 uid="uid://bworuobe2yfqo"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_8vii5"]
[ext_resource type="Texture2D" uid="uid://b4iexmhdkxs3a" path="res://art/object/Без имени-2.png" id="3_x34ij"]
[ext_resource type="PackedScene" uid="uid://c14nsvjbyqvq0" path="res://scene/hud.tscn" id="4_5u4nl"]
[ext_resource type="Texture2D" uid="uid://d1ebxnukp5ppo" path="res://art/object/Untitled 01-08-2024 05-14-10 (6).png" id="4_ufep3"]
[ext_resource type="PackedScene" uid="uid://c6hceidnjxq85" path="res://scene/object.tscn" id="5_ycli1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k66x1"]
texture = ExtResource("3_x34ij")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -6, 64, -6, 64, 64, -64, 64)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u5ayw"]
texture = ExtResource("4_ufep3")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_wdsgv"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_k66x1")
sources/2 = SubResource("TileSetAtlasSource_u5ayw")

[node name="Main" type="Node2D"]
script = ExtResource("1_8vii5")

[node name="HUD" parent="." instance=ExtResource("4_5u4nl")]

[node name="TileMap" type="TileMap" parent="."]
unique_name_in_owner = true
tile_set = SubResource("TileSet_wdsgv")
format = 2
layer_0/name = "back"
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(-1, 196608, 0, -65536, 262144, 0, -65535, 262144, 0, -65534, 262144, 0, -65533, 262144, 0, -65532, 262144, 0, -65531, 262144, 0, -65530, 262144, 0, -65529, 262144, 0, -65528, 262144, 0, -65527, 262144, 0, -65526, 262144, 0, -65525, 262144, 0, -65524, 262144, 0, -65523, 262144, 0, -65522, 262144, 0, -65521, 327680, 0, 15, 327680, 1, 65551, 327680, 1, 131087, 327680, 1, 131086, 262144, 1, 131085, 262144, 1, 131084, 262144, 1, 131083, 262144, 1, 131082, 262144, 1, 131081, 262144, 1, 131080, 262144, 1, 131079, 262144, 1, 131078, 262144, 1, 131077, 262144, 1, 131076, 262144, 1, 131074, 262144, 1, 131072, 262144, 1, 65536, 262144, 1, 65537, 262144, 1, 65538, 262144, 1, 65539, 262144, 1, 65540, 262144, 1, 65541, 262144, 1, 65542, 262144, 1, 65543, 262144, 1, 65544, 262144, 1, 65545, 262144, 1, 65546, 262144, 1, 65547, 262144, 1, 65548, 262144, 1, 65549, 262144, 1, 65550, 262144, 1, 14, 262144, 1, 0, 262144, 1, 1, 262144, 1, 2, 262144, 1, 3, 262144, 1, 4, 262144, 1, 5, 262144, 1, 6, 262144, 1, 7, 262144, 1, 8, 262144, 1, 9, 262144, 1, 10, 262144, 1, 11, 262144, 1, 12, 262144, 1, 13, 262144, 1, 65535, 196608, 1, 131071, 196608, 1, 196607, 196608, 1, 196608, 262144, 2, 196609, 262144, 2, 196610, 262144, 2, 196612, 262144, 2, 196613, 262144, 2, 196614, 262144, 2, 196615, 262144, 2, 196616, 262144, 2, 196617, 262144, 2, 196618, 262144, 2, 196620, 262144, 2, 196621, 262144, 2, 196622, 262144, 2, 196623, 327680, 1, 262143, 196608, 1, 262144, 65536, 1, 262145, 65536, 1, 262146, 65536, 1, 262147, 65536, 1, 262148, 65536, 1, 262149, 65536, 1, 262150, 65536, 1, 262151, 65536, 1, 262152, 65536, 1, 262153, 65536, 1, 262154, 65536, 1, 262155, 65536, 1, 262156, 65536, 1, 262157, 65536, 1, 262158, 65536, 1, 327680, 65536, 1, 393216, 65536, 1, 458752, 65536, 1, 458753, 65536, 1, 393217, 65536, 1, 327681, 65536, 1, 327682, 65536, 1, 327683, 65536, 1, 393219, 65536, 1, 393218, 65536, 1, 458754, 65536, 1, 458755, 65536, 1, 458756, 65536, 1, 393220, 65536, 1, 327684, 65536, 1, 327685, 65536, 1, 327686, 65536, 1, 393222, 65536, 1, 393221, 65536, 1, 458757, 65536, 1, 458758, 65536, 1, 327687, 65536, 1, 393223, 65536, 1, 458759, 65536, 1, 458760, 65536, 1, 393224, 65536, 1, 327688, 65536, 1, 327689, 65536, 1, 393225, 65536, 1, 393226, 65536, 1, 458761, 65536, 1, 458762, 65536, 1, 327690, 65536, 1, 327691, 65536, 1, 393227, 65536, 1, 458763, 65536, 1, 458764, 65536, 1, 393228, 65536, 1, 327692, 65536, 1, 327693, 65536, 1, 393229, 65536, 1, 458765, 65536, 1, 458766, 65536, 1, 393230, 65536, 1, 327694, 65536, 1, 524288, 65536, 2, 524289, 65536, 2, 524290, 65536, 2, 524291, 65536, 2, 524292, 65536, 2, 524293, 65536, 2, 524294, 65536, 2, 524295, 65536, 2, 524296, 65536, 2, 524297, 65536, 2, 524298, 65536, 2, 524299, 65536, 2, 524300, 65536, 2, 524301, 65536, 2, 524302, 65536, 2, 262159, 131072, 1, 327695, 131072, 1, 393231, 131072, 1, 458767, 131072, 1, 327679, 0, 1, 393215, 0, 1, 458751, 0, 1, 524287, 0, 1, 589823, 0, 2, 524303, 131072, 2, 131073, 262144, 1, 131075, 262144, 1, 196611, 262144, 2, 196619, 262144, 2)
layer_1/name = "shelf"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(196611, 131074, 1, 196619, 131074, 1, 131072, 2, 1, 131085, 65538, 1, 131084, 65538, 1, 131083, 65538, 1, 131082, 65538, 1, 131081, 65538, 1, 131080, 65538, 1, 131079, 65538, 1, 131078, 65538, 1, 131077, 65538, 1, 131076, 65538, 1, 131075, 65538, 1, 131074, 65538, 1, 131073, 65538, 1, 131086, 131074, 1)

[node name="Timer_mess" type="Timer" parent="."]
wait_time = 50.0
autostart = true

[node name="brush_cursor" type="Sprite2D" parent="."]

[node name="Object" parent="." instance=ExtResource("5_ycli1")]

[connection signal="make_child" from="HUD" to="." method="_on_hud_make_child"]
[connection signal="spawnrat" from="HUD" to="." method="_on_hud_spawnrat"]
[connection signal="timeout" from="Timer_mess" to="." method="_on_timer_mess"]
